Fix alignment of expand icon
Also fix loading of styles for lazy.css to avoid FOUC and
inline style hacks.

Bug: T162804

--- a/modules/ext.RevisionSlider.css
+++ b/modules/ext.RevisionSlider.css
@@ -1,41 +1,9 @@
-@media print {
-	.mw-revslider-container {
-		display: none;
-	}
-}
-
-.mw-revslider-container {
-	/* This will flip with CSSJanus in case */
-	/* the interface is in RTL */
-	direction: ltr;
-	position: relative;
-	z-index: 8;
-}
-
 .mw-revslider-container-expanded {
 	margin-bottom: 15px;
 }
 
 .mw-revslider-container-collapsed {
 	margin-bottom: 0;
-}
-
-.mw-revslider-toggle-button {
-	width: 100%;
-	text-align: center;
-}
-
-.mw-revslider-toggle-button .oo-ui-buttonElement-button {
-	width: 100%;
-	padding: 0.06em 0 0.06em 0;
-}
-
-.mw-revslider-toggle-button .oo-ui-labelElement-label {
-	line-height: 1.875em;
-}
-
-.mw-revslider-toggle-button .oo-ui-iconElement-icon {
-	float: right;
 }
 
 .mw-revslider-auto-expand-button {
