--- a/modules/ext.RevisionSlider.lazy.css
+++ b/modules/ext.RevisionSlider.lazy.css
@@ -1,5 +1,3 @@
-/* This CSS is duplicated in ext.RevisionSlider.css */
-
 @media print {
 	.mw-revslider-container {
 		display: none;
@@ -12,6 +10,17 @@
 	direction: ltr;
 	position: relative;
 	z-index: 8;
+	border: 1px solid #ccc;
+}
+
+.mw-revslider-slider-wrapper {
+	min-height: 142px;
+	border-top: 1px solid #ccc;
+	padding: 20px 10px;
+}
+
+.mw-revslider-placeholder .oo-ui-progressBarWidget {
+	margin: 60px auto;
 }
 
 .mw-revslider-toggle-button {
@@ -26,10 +35,13 @@
 	padding: 0.06em 0 0.06em 0;
 }
 
-.mw-revslider-toggle-button .oo-ui-labelElement-label {
-	line-height: 1.875em;
+.mw-revslider-toggle-button .oo-ui-iconElement-icon {
+	left: auto !important; /* stylelint-disable-line declaration-no-important */
+	right: 0;
+	/* For OOUI-Apex */
+	position: absolute;
 }
 
-.mw-revslider-toggle-button .oo-ui-iconElement-icon {
-	float: right;
+.mw-revslider-toggle-button .oo-ui-labelElement-label {
+	line-height: 1.875em;
 }
